--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,10 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="work">
-        <wb-resource deploy-path="/" source-path="/WebRoot"/>
+<?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
+    <wb-module deploy-name="lab">
+        <wb-resource deploy-path="/" source-path="/WebRoot" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="/work"/>
-        <property name="java-output-path" value="/work/WebRoot/WEB-INF/classes"/>
+        <property name="java-output-path" value="/lab/WebRoot/WEB-INF/classes"/>
+        <property name="me-merge-utility-modules" value="true"/>
+        <property name="me-struts-base-pkg" value="com.yourcompany.struts"/>
+        <property name="context-root" value="/lab"/>
     </wb-module>
 </project-modules>
